--- a/index.html
+++ b/index.html
@@ -1,10 +1,114 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="es">
 <head>
-  <title>Mi pagina web</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Proyectos Inteligencia Artificial</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            background-color: #f5f5f5;
+            color: #333;
+        }
+        header {
+            background-color: #007ACC;
+            color: white;
+            padding: 25px 10px;
+            text-align: center;
+        }
+        header h1 {
+            margin: 0;
+        }
+        nav {
+            text-align: center;
+            margin: 15px 0;
+        }
+        nav a {
+            text-decoration: none;
+            color: #007ACC;
+            margin: 0 15px;
+            font-weight: bold;
+        }
+        .projects {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            padding: 25px;
+            gap: 20px;
+        }
+        .project-card {
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+            width: 300px;
+            padding: 20px;
+            transition: transform 0.2s;
+            text-align: center;
+        }
+        .project-card:hover {
+            transform: scale(1.05);
+        }
+        .project-card h3 {
+            margin-top: 0;
+        }
+        .project-card p {
+            font-size: 14px;
+            color: #555;
+        }
+        .project-card a {
+            display: inline-block;
+            margin-top: 12px;
+            padding: 8px 14px;
+            background-color: #007ACC;
+            color: white;
+            border-radius: 5px;
+            text-decoration: none;
+            font-size: 14px;
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #222;
+            color: white;
+            margin-top: 30px;
+        }
+        @media(max-width: 650px){
+            .projects {
+                flex-direction: column;
+                align-items: center;
+            }
+        }
+    </style>
 </head>
 <body>
-  <h1>Este sitio pertenece a Greys Castillo </h1>
-  <p>Publicado directamente desde Github</p>
+
+<header>
+    <h1>Proyectos - Inteligencia Artificial</h1>
+    <nav>
+        <a href="#projects">Proyectos</a>
+        <a href="#contact">Contacto</a>
+    </nav>
+</header>
+
+<section id="projects" class="projects">
+    <!-- Aquí agregarás tus proyectos cuando tengas -->
+    <div class="project-card">
+        <h3>Proyecto 1</h3>
+        <p>Descripción breve del proyecto 1.</p>
+        <a href="#">Ver proyecto</a>
+    </div>
+
+    <div class="project-card">
+        <h3>Proyecto 2</h3>
+        <p>Descripción breve del proyecto 2.</p>
+        <a href="#">Ver proyecto</a>
+    </div>
+</section>
+
+<footer id="contact">
+    <p>Creado por [Tu Nombre] &copy; 2025</p>
+</footer>
+
 </body>
 </html>
